2006-02-08  Jakub Steiner <jimmac@ximian.com>

	* drive-cdrom:
	* drive-harddisk:
	* drive-removable-media:
	* media-cdrom: new device icons
	
2006-02-07  Jakub Steiner <jimmac@ximian.com>

	* folders: emblem anchors for scalables. Remove 48x48s

2006-02-07  Jakub Steiner <jimmac@ximian.com>

	* index.theme.in: add animations context

2006-02-06  Rodney Dawes  <dobey@novell.com>

	* NEWS:
	* configure.in: Update for 2.13.7 release

2006-02-06  Rodney Dawes  <dobey@novell.com>

	* configure.in:
	* 24x24/Makefile.am:
	* 48x48/Makefile.am:
	* 24x24/animations/Makefile.am:
	* 48x48/animations/Makefile.am:
	Update for the new 24px and 48px size animation sequences

2006-02-06  Jakub Steiner <jimmac@ximian.com>

	* process-working: use a gradinet to better work on grey gtk
		themes. add 24x24 and 48x48 versions.
	
2006-02-06  Rodney Dawes  <dobey@novell.com>

	* configure.in:
	* 16x16/Makefile.am:
	* 16x16/animations/Makefile.am:
	Add all the Makefile magic to install the animations

	* 16x16/animations/process-idle.png: Single frame of the animation
	for compatibility with gnome-spinner-rest

2006-02-06  Jakub Steiner <jimmac@ximian.com>

	* scalable/places/folder-remote.svg
	* scalable/places/folder.svg
	* scalable/places/user-home.svg
	* scalable/status/folder-drag-accept.svg
	* scalable/status/folder-open.svg
	* scalable/status/folder-visiting.svg: lighten up a bit


2006-02-06  Jakub Steiner <jimmac@ximian.com>

	* folder-remote: in SVG now
	* document-print-preview: only bitmap for now
	* animations/process-working: new throbber in the animation
		context
	
2006-02-04  Rodney Dawes  <dobey@novell.com>

	* NEWS:
	* configure.in: Update for 2.13.6 release

2006-02-03  Rodney Dawes  <dobey@novell.com>

	* configure.in: Up icon-naming-utils requirement to 0.6.7

2006-02-03  Rodney Dawes  <dobey@novell.com>

	* */filesystems/gnome-fs-regular.*:
	Remove this icon to be replaced by text-x-preview

	* */mimetypes/Makefile.am:
	Update for additions/removals of icons
