@@ -1,3 +1,8 @@
+2006-02-09  Jakub Steiner <jimmac@ximian.com>
+
+	* 24x24/devices: can't do 24 from 22 as it would mean depending on
+		imagemagick. doing manually for now.
+
 2006-02-08  Jakub Steiner <jimmac@ximian.com>
 
 	* drive-cdrom:
